main.css
@media (min-width: 768px) {
  .border-md-left {
    border-left: 1px solid #eee;
  }
  .border-md-right {
    border-right: .1rem solid #7f7f7f;
  }

  .border-light-md-left {
    border-left: 0.12rem solid #fff;
  }
  .border-light-md-right {
    border-right: 0.12rem solid #fff;
  }
}

a {
  text-decorations: none;
  color: inherit;
}

.bg-grey {
  background: #fafafa;
}

.work-icon {
  height: 34px;
  width: auto;
}

